--- a/src/Jhoose.Security/package.json
+++ b/src/Jhoose.Security/package.json
@@ -13,38 +13,37 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@episerver/ui-framework": "^0.14.1",
+    "@ant-design/icons": "^5.3.7",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.3.2",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^9.0.8",
-    "axios": "^0.21.2",
+    "antd": "^5.18.0",
+    "axios": "^1.7.2",
     "babel-cli": "^6.26.0",
-    "babel-preset-react-app": "^3.1.2",
-    "body-parser": "^1.19.0",
-    "caniuse-lite": "^1.0.30001458",
-    "express": "^4.17.3",
-    "lokijs": "^1.5.11",
-    "react-router-dom": "^5.2.0",
-    "uuid": "^3.4.0"
+    "babel-preset-react-app": "^10.0.1",
+    "body-parser": "^1.20.2",
+    "caniuse-lite": "^1.0.30001629",
+    "express": "^4.19.2",
+    "lokijs": "^1.5.12",
+    "react-router-dom": "^6.23.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/preset-env": "^7.12.16",
-    "@babel/preset-react": "^7.12.13",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
     "@types/react-router-dom": "^5.3.3",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.0.2",
-    "mini-css-extract-plugin": "^1.3.6",
-    "node-sass": "^7.0.0",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
+    "mini-css-extract-plugin": "^2.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass-loader": "^10.1.1",
-    "style-loader": "^2.0.0",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
-    "webpack": "^5.21.2",
-    "webpack-cli": "^4.7.2"
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
