--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ src/Sample/DemoSite/App_Data/blobs/
 /src/Sample/DemoSite461/App_Data/EPiServerDB_13705f33_log.ldf
 
 src/Jhoose.Security.Reporting/obj/
+
+src/Jhoose.Security.Reporting/bin/
