--- a/src/Jhoose.Security.Reporting/Jhoose.Security.Reporting.csproj
+++ b/src/Jhoose.Security.Reporting/Jhoose.Security.Reporting.csproj
@@ -11,7 +11,7 @@
 		  https://api.nuget.org/v3/index.json;
 		  https://nuget.optimizely.com/feed/packages.svc;
   	</RestoreSources>
-
+    <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
 
 
