--- a/src/Jhoose.Security.Reporting/Jhoose.Security.Reporting.csproj
+++ b/src/Jhoose.Security.Reporting/Jhoose.Security.Reporting.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-		<TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+		<TargetFrameworks>net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <LangVersion>12</LangVersion>
+    <LangVersion>13</LangVersion>
 
     <RestoreSources>
 		  $(RestoreSources);
